# PlotX

./: .gitignore  AUTHORS  Makefile.am  README.md  config.h  config.h.in~  configure.ac  libtool
examples/: Makefile.am  example  example.cpp  example.px
examples/.deps/: example.Po
examples/.libs/: example
src/: Makefile.am  plotx.cpp  plotx.h
src/.deps/: plotx.Plo
src/.libs/: libplotx.so.0  libplotx.so.0.0.0
